centered title area. tried to fix left/right alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,44 +1,50 @@
 h1{
-    font-size: 50px;  
-    margin-left: auto;
-    margin-right: auto;
+    font-size: 50px;
+	float: left; 
 }
 
 .text{
     font-size: 20px;
 }
-.title{
-    padding-left:15px; 
-    padding-right:10px;
+#title-bar{
+    margin-bottom: 15px;
+    border-bottom: 1px solid lightgrey;
+}
+
+#header{
+	margin-left:auto; 
+	margin-right:auto;
 }
 
 p{
     padding-top: 10px; 
     padding-bottom: 5px; 
-    /*padding-left: 15px;*/
     padding-right: 20px;
 }
 
 #selectActBtn{
-    /*margin-left: 15px;
-    width: 195px;*/
     margin-top: 5px;
     clear: both;
-    /*padding-left: 15px;*/
 }
 
 #notif{
-    /*padding-left: 15px;*/
 }
 
 #helpBtn{
     width: 40px;
     height: 30px;
     padding-bottom: 5px;
+	margin-top: 20px;
+	margin-left: 15px;
+	
 }
 
 #homepg{
-	padding-left: 20px;
-	padding-right: 20px;
 	width: 100%;
+}
+
+body{
+	margin-left: 20px;
+	margin-right: 20px;
+	margin-top: 10px;
 }
